--- a/2020_Dec_TUKS/index.html
+++ b/2020_Dec_TUKS/index.html
@@ -45,7 +45,7 @@ class: center, middle
 
 Presentation created using **{xaringan}** (the **robot** theme)
 
-Slides available at [mkearney.github.io/dsa_execweek_talk/](https://mkearney.github.io/dsa_execweek_talk/)
+Slides available at [https://tanyas08.github.io/Talks/2020_Dec_TUKS/index.html](https://tanyas08.github.io/Talks/2020_Dec_TUKS/index.html)
 
 ---
 
@@ -107,9 +107,69 @@ student training
 
 ---
 
+# OS and the Data Lifecycle
+
+.center[Open Science can help extend the lifespan of a dataset e.g. by allowing it to be reused for data synthesis or re-analysis
+]
+
+--
+.center[
+&lt;img src="img/TheWay.jpeg" width="58%" /&gt;
+]
+
+--
+
+.center[
+But in order for this to happen your data needs to be **usable**
+]
+
+---
+
 # Make your Science FAIR
 
 .center[***F**indable, **A**ccessible, **I**nteroperable and **R**eproducible*]
+
+.pull-left[
+
+* Sharing data is the first step but not the only one
+
+* **FAIR** principles focus on data usability
+
+* Data are only as good as their documentation
+
+]
+
+---
+
+# So What?
+
+1. Open Science will be the 'new normal' and is becoming an expectation for publication and funding
+
+2. Open data leads to increased citations
+
+3. It fosters collaboration and opens doors for what we can achieve with our research
+
+4. It makes your (personal) workflow easier (especially for future you) **and** makes for easier collaborative work/writing
+  + The little bit of extra time is worth it - trust me
+
+---
+
+# A Quick Case Study&lt;sub style="font-size: medium;"&gt;(on what not to do)&lt;/sub&gt;
+
+
+.left-column[
+
+* My honours file naming 'system'
+
+* The 'amazing' documentation
+
+* To quote the lobster from the *Little Mermaid* "it's a mess"
+
+]
+
+.right-column[
+&lt;img src="img/case_study.png" width="100%" /&gt;
+]
 
 ---
 
@@ -118,6 +178,8 @@ student training
 .footnote[[*] Respecting data sharing restrictions and embargoes]
 
 .left-column[data lifecycle.png]
+
+--
 
 .right-column[
 - Think about how you enter your data
@@ -136,7 +198,7 @@ student training
   * Include **all** documentation
   
   
-- Do some of your own research
+- Do some of your [own research](https://www.fosteropenscience.eu/courses)
 ]
 
 ---
@@ -146,38 +208,34 @@ background-image: url(https://d33wubrfki0l68.cloudfront.net/62bcc8535a06077094ca
 background-position: bottom
 background-size: 20%
 
-# 1. Scripting changes
+# 1. Documenting, Documenting and Documenting
 
 ---
 background-image: url(https://d33wubrfki0l68.cloudfront.net/62bcc8535a06077094ca3c29c383e37ad7334311/a263f/assets/img/logo.svg)
 background-position: bottom right
 background-size: 20%
 
-# Keep it Scripted
+# If it isn't Documented it Doesn't Exist
 
-Ultimately after inputting your data into a file&lt;sup&gt;*&lt;/sup&gt; it should remain untouched and unchanged. 
+**Document all changes to raw data**
++ Ideally after inputting your data into a file&lt;sup&gt;*&lt;/sup&gt; it should remain untouched and unchanged. 
++ Using a script based workflow means you keep track of what and how things changed (*sensu lato* a lab book)
 
 .footnote[[*] Ideally using a non propriety format such as .csv or .txt]
 
 --
 
-**What does that even mean?**
+**Document the *entire* workflow**
++ Having metadata for variables is good
+  + Mandatory I'd argue
++ Documenting how scripts 'work' - even better
+  + What happens in each script
+  + What order to work with them
 
---
+---
 
-- We want to keep `data_raw.csv` intact and end up with `data_clean.csv` on the other side
-
---
-
-**Why should I script it?**
---
-
-1. It allows you (and others) to keep track of&lt;br&gt;what you changed
-
-1. Document why you made the changes you&lt;br&gt;did (*sensu lato* a lab book)
-
-1. Avoid the all to common `_cleaned`,&lt;br&gt;`_cleaned2` issue
-
+background-image: url(img/Documentation.png)
+background-size: 80%
 
 ---
 class: inverse, middle, center
@@ -205,12 +263,15 @@ Annotating your code by adding comments makes it easier for you (and others) to 
   * Especially when cleaning or transforming data
   ]
 
+.pull-right[
+&lt;img src="img/annotations.png" width="100%" /&gt;]
+
 ---
 class: inverse, middle, center
 
-background-image: url(https://d33wubrfki0l68.cloudfront.net/62bcc8535a06077094ca3c29c383e37ad7334311/a263f/assets/img/logo.svg)
+background-image: url(img/octobiwan.png)
 background-position: bottom
-background-size: 20%
+background-size: 35%
 
 # 3. Data Archiving &lt;sub style="font-size: medium;"&gt;(with bonus version control)&lt;/sub&gt; 
 
@@ -218,24 +279,34 @@ background-size: 20%
 
 # Get with GitHub
 
+.footnote[[*] I find this also 'forces' me to make sure my code is readable/shareable]
+
 Think of GitHub as a google drive of sorts that you would keep your projects in - the only difference is that it has some bonus features.
 
 * **It's Open Access:** Like a social media profile that people can click on and explore it *i.e.* you can share and showcase your work/packages/projects&lt;sup&gt;*&lt;/sup&gt;.
   + This is where your data/analyses can 'live' until needed.
 
+--
+
 * **It has Version Control:** This means that every time you re-upload a file the older versions are saved (and can be recouped if needed).
   + You can do this [straight from RStudio](https://happygitwithr.com/rstudio-git-github.html)
   + This also facilitates collaboration in a big way (no more email chain!)
+      + Everyone has the most up to date version on their device
+
+--
 
 * **It's Designed for Programming:** Aside form simple storage of files you can design [workflows](https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions) that run jobs depending on what happens in the repository.
 
-.footnote[[*] I find this also 'forces' me to make sure my code is readable/shareable]
+---
+
+background-image: url(img/GitHub.png)
+background-size: 100%
 
 ---
 
 # A GitHub 'Primer'
 
-1. GitHub is the 'norm' in the world of Open Source  - so if you want to go open  go with GitHub
+1. GitHub is the 'norm' in the world of Open Source  - so if you want to go open go with GitHub
 
 1. [Happy Git and GitHub for the useR](https://happygitwithr.com) is a great starting point if you're interested
   + especially for installing Git on your device (it can be a bit confusing)
@@ -249,7 +320,14 @@ Think of GitHub as a google drive of sorts that you would keep your projects in 
 
 # Other Ways to Open your Science
 
-+ 
++ Data archiving
+
++ Pre-registered reports
+
++ Preprints
+
++ Social media
+
 
 
 
