--- a/2020_Dec_QCBS/index.html
+++ b/2020_Dec_QCBS/index.html
@@ -93,10 +93,10 @@ What proportion of potential interaction are realised?
 
 &lt;span 
   style="
-  margin-left:0%; 
+  margin-left:-3%; 
   position: absolute; 
-  top: 35%"&gt;
-  &lt;img src="img/structure.png" width="95%" /&gt;
+  top: 50%"&gt;
+  &lt;img src="img/structure.png" width="90%" /&gt;
 &lt;/span&gt;
 
 ???
@@ -128,7 +128,6 @@ Instead we can measure the 'physical complexity' *i.e.* the amount of informatio
 
 # Estimating complexity using SVD
 
-`$$\mathbf{A} = \mathbf{U}\cdot\mathbf{\Sigma}\cdot\mathbf{V}^T$$`
 
 &lt;span 
   style="
@@ -140,7 +139,9 @@ Instead we can measure the 'physical complexity' *i.e.* the amount of informatio
 
 ---
 
-# SVD Entropy as internal complexity
+# SVD Entropy as complexity
+
+
 
 Using the `\(\sigma\)` values from `\(\mathbf{\Sigma}\)` and following Pielou's evenness  (Pielou 1975) we can ensure that `\(\sigma\)` values are less than one:
 
@@ -167,13 +168,13 @@ where k is the max rank
 
 ---
 
-# SVD Entropy as internal complexity
+# SVD Entropy as complexity
 
 &lt;span 
   style="
   margin-left:0%; 
   position: absolute; 
-  top: 30%"&gt;
+  top: 25%"&gt;
   &lt;img src="img/SVD_vis.png" width="90%" /&gt;
 &lt;/span&gt;
 
@@ -187,7 +188,7 @@ Ecological networks are *extremely* complex
   margin-left:0%; 
   position: absolute; 
   top: 20%"&gt;
-  &lt;img src="img/interactiontype_v_entropy.png" width="93%" /&gt;
+  &lt;img src="img/interactiontype_v_entropy2.png" width="93%" /&gt;
 &lt;/span&gt;
 
 ---
@@ -196,26 +197,36 @@ Ecological networks are *extremely* complex
 
 &lt;span 
   style="
-  margin-left:15%; 
+  margin-left:-5%; 
   position: absolute; 
-  top: 25%"&gt;
-  &lt;img src="img/others_v_entropy.png" width="95%" /&gt;
+  top: 30%"&gt;
+  &lt;img src="img/others_v_entropy2.png" width="88%" /&gt;
 &lt;/span&gt;
 
---
+???
+Interstingly although we see this strong relationship its also interesting to note that while the networks span the almost the 'complete' range of possible values for connectance and nesetedness - something we don't see for entropy
 
- .footnote[But then things begin to tell a different story...]
+Arguably these measures are telling a similar story but what happens when we take a bit more of an ecological approach e.g. resilliance
+
 ---
-# Complex does not mean robust
+# Defining Complexity Matters
+
+&lt;span 
+  style="
+  margin-left:-5%; 
+  position: absolute; 
+  top: 23%"&gt;
+  &lt;img src="img/axes.png" width="95%" /&gt;
+&lt;/span&gt;
 
 --
 
 &lt;span 
   style="
-  margin-left:10%; 
+  margin-left:-5%; 
   position: absolute; 
-  top: 30%"&gt;
-  &lt;img src="img/entropy_v_AUCall.png" width="75%" /&gt;
+  top: 23%"&gt;
+  &lt;img src="img/entropy_v_AUCall2.png" width="95%" /&gt;
 &lt;/span&gt;
 
 ???
@@ -225,22 +236,66 @@ How do we define resilience in ecological terms -&gt; focus on how we defined re
 
 ---
 
-# What next?
+# Connecting the Dots
 
-+ Complexity is a slippery term to define
+.pull-left[
 
-+ Different measures of complexity capture different ecological processes
+1. Ecological networks are extremely complex
 
-  * *e.g.* simulating robustness to extinctions
-  
-+ SVD Entropy may provide a starting point to unifying the definition of complexity
+2. Different measures of complexity capture different ecological processes
+
+3. We need to unify how we define complexity
+]
 
 .footnote[
 For a more complete breakdown the preprint can be found at [doi.org/fmpt](https://doi.org/fmpt)
 ]
 
+&lt;span 
+  style="
+  margin-left:0%; 
+  position: absolute; 
+  top: 23%"&gt;
+  &lt;img src="img/con1.png" width="85%" /&gt;
+&lt;/span&gt;
+
+--
+
+&lt;span 
+  style="
+  margin-left:0%; 
+  position: absolute; 
+  top: 23%"&gt;
+  &lt;img src="img/con2.png" width="90%" /&gt;
+&lt;/span&gt;
+
+--
+
+&lt;span 
+  style="
+  margin-left:0%; 
+  position: absolute; 
+  top: 23%"&gt;
+  &lt;img src="img/con3.png" width="80%" /&gt;
+&lt;/span&gt;
+
+--
+
+&lt;span 
+  style="
+  margin-left:0%; 
+  position: absolute; 
+  top: 23%"&gt;
+  &lt;img src="img/con4.png" width="90%" /&gt;
+&lt;/span&gt;
+
+
 ???
-Visually draw it back so bring the images - we can use different measures of complexity and they can tell a different story, building lego blocks
+1. ecological networks are very complex
+
+Our different measures of complexity don't always tell the same story e.g. resilience and suggests that they are probably underpinning different ecological properties
+
+Thus we need a standardised mechanism -&gt; here we argue in favoure of SVD entropy
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
