--- a/2020_Dec_QCBS/index.html
+++ b/2020_Dec_QCBS/index.html
@@ -20,7 +20,6 @@ class: center, middle, inverse, title-slide
 <body style="font-size:8pt;">
 <small><sup>1</sup>Département de Sciences Biologiques, Université de Montréal; <sup>2</sup>Québec Centre for Biodiversity Sciences; <sup>3</sup>School of Mathematics and Statistics, University of Canterbury</small>
 </body>
-### <p><a href="https://twitter.com/tanyas_08"><i class="fa fa-twitter"></i></a><a href="https://twitter.com/tanyas_08"> <span class="citation">@TanyaS_08</span> </a></p>
 
 ---
 
@@ -233,69 +232,98 @@ Arguably these measures are telling a similar story but what happens when we tak
 First do the axes and then have the point appear
 How do we define resilience in ecological terms -&gt; focus on how we defined resilience
 
-
 ---
 
 # Connecting the Dots
 
-.pull-left[
+&lt;span 
+  style="
+  margin-left: -15%; 
+  position: absolute; 
+  top: 9%"&gt;
+  &lt;img src="img/community.png" width="65%" /&gt;
+&lt;/span&gt;
 
-1. Ecological networks are extremely complex
+--
 
-2. Different measures of complexity capture different ecological processes
+&lt;span style="margin: 0;
+  position: absolute;
+  bottom: 65%;
+  text-align: left;
+  left: 34%;"&gt; 1. Not all measures of&lt;br&gt;
+  complexity are created&lt;br&gt;
+  equal 
+&lt;/span&gt;
 
-3. We need to unify how we define complexity
-]
+&lt;span 
+  style="
+  margin-left:30%; 
+  position: absolute; 
+  top: 37%"&gt;
+  &lt;img src="img/entropy_v_AUCall2.png" width="25%" /&gt;
+&lt;/span&gt;
+
+--
+
+&lt;span style="margin: 0;
+  position: absolute;
+  bottom: 37%;
+  text-align: left;
+  left: 34%;"&gt; 2. Complexity is not&lt;br&gt;
+  always intuitive 
+&lt;/span&gt;
+
+&lt;span 
+  style="
+  margin-left:30%; 
+  position: absolute; 
+  top: 66%"&gt;
+  &lt;img src="img/others_v_entropy2.png" width="26%" /&gt;
+&lt;/span&gt;
+
+--
+
+&lt;span 
+  style="
+  margin-left:60%; 
+  position: absolute; 
+  top: 35%"&gt;
+  &lt;img src="img/con2.png" width="70%" /&gt;
+&lt;/span&gt;
+
+&lt;span style="margin: 0;
+  position: absolute;
+  bottom: 65%;
+  text-align: center;
+  left: 70%;"&gt; unified&lt;br&gt;
+  definition
+&lt;/span&gt;
+
+--
+
+&lt;span 
+  style="
+  margin-left:68%; 
+  position: absolute; 
+  top: 60%"&gt;
+  &lt;img src="img/con1.png" width="100%" /&gt;
+&lt;/span&gt;
+
+&lt;span style="margin: 0;
+  position: absolute;
+  bottom: 40%;
+  text-align: center;
+  left: 79%;"&gt; SVD Entropy
+&lt;/span&gt;
+
+--
 
 .footnote[
 For a more complete breakdown the preprint can be found at [doi.org/fmpt](https://doi.org/fmpt)
 ]
 
-&lt;span 
-  style="
-  margin-left:0%; 
-  position: absolute; 
-  top: 23%"&gt;
-  &lt;img src="img/con1.png" width="85%" /&gt;
-&lt;/span&gt;
-
---
-
-&lt;span 
-  style="
-  margin-left:0%; 
-  position: absolute; 
-  top: 23%"&gt;
-  &lt;img src="img/con2.png" width="90%" /&gt;
-&lt;/span&gt;
-
---
-
-&lt;span 
-  style="
-  margin-left:0%; 
-  position: absolute; 
-  top: 23%"&gt;
-  &lt;img src="img/con3.png" width="80%" /&gt;
-&lt;/span&gt;
-
---
-
-&lt;span 
-  style="
-  margin-left:0%; 
-  position: absolute; 
-  top: 23%"&gt;
-  &lt;img src="img/con4.png" width="90%" /&gt;
-&lt;/span&gt;
-
-
 ???
-1. ecological networks are very complex
 
-Our different measures of complexity don't always tell the same story e.g. resilience and suggests that they are probably underpinning different ecological properties
-
-Thus we need a standardised mechanism -&gt; here we argue in favoure of SVD entropy
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
