--- a/2021_CommitteeStuff/index.html
+++ b/2021_CommitteeStuff/index.html
@@ -28,6 +28,8 @@ class: center, middle, inverse, title-slide
 
 Featuring the stylings of GVDR
 
+Redefining how we define complexity and maybe some additional exploring
+
 .pull-left[
 **Done**
 
@@ -38,16 +40,10 @@ Featuring the stylings of GVDR
 
 + Complexity and network assembly
 + What constrains complexity - vaguely
++ building on (and with?) GVDR's contributions to the OG ms
 
 ]
 
-&lt;span 
-  style="
-  margin-left:0%; 
-  position: absolute; 
-  top: 40%"&gt;
-  &lt;img src="img/wombat.png" width="80%" /&gt;
-&lt;/span&gt;
 
 ---
 
@@ -57,7 +53,8 @@ Featuring the stylings of GVDR
 
 Featuring *The Fellowship*
 
-.pull-left[
+A horizon scan of the toolsets and the future of predicting ecological networks - with a focus on ML
+
 **Done**
 
 + Predicting networks: a roadmap
@@ -66,15 +63,15 @@ Featuring *The Fellowship*
  
 + Could this link to `Project Pokedex`?
 + I feel there is room for expansion...
++ A part of me loves the idea of having something similar to Eva's `Analysing ecological networks of species interactions` ms but I don't know if this is necessarily feasible/exactly what that would look like...
  
-]
 
 &lt;span 
   style="
-  margin-left:0%; 
+  margin-left:70%; 
   position: absolute; 
-  top: 40%"&gt;
-  &lt;img src="img/wombat.png" width="80%" /&gt;
+  top: 5%"&gt;
+  &lt;img src="img/ProjectRing.jpg" width="80%" /&gt;
 &lt;/span&gt;
 
 ---
@@ -85,18 +82,21 @@ Featuring *The Fellowship*
 
 Featuring the scary unknown that is Marie-José Fortin
 
+Rethinking what we use to draw lines across the landscape - something more indicative of the community than just composition
+
 .pull-left[
 + Applying spatial wombling to ecological networks
 + thinking in terms of ecotrophic regions
 + Linking this up with `Project Pokedex`
++ With a `SpatialBoundaries.jl` as at least some sort of end product... 
 ]
 
 &lt;span 
   style="
   margin-left:0%; 
   position: absolute; 
-  top: 40%"&gt;
-  &lt;img src="img/wombat.png" width="80%" /&gt;
+  top: 43%"&gt;
+  &lt;img src="img/wombat.png" width="75%" /&gt;
 &lt;/span&gt;
 
 ---
@@ -123,24 +123,47 @@ There are two 'angles' that get me excited.
   margin-left:0%; 
   position: absolute; 
   top: 40%"&gt;
-  &lt;img src="img/wombat.png" width="80%" /&gt;
+  &lt;img src="img/ProjectJaguar.png" width="80%" /&gt;
 &lt;/span&gt;
 
 ---
 
 # The 'Side Quests'
 
+i.e. things that are either Appendix-able or could contribute to other chapters
+
 ## Project Pokedex
 
 ### *CIEE: A metaweb story*
 
-&gt; Building a metaweb for Canadian invertebrates
++ Building a metaweb for Canadian vertebrates
+
++ This could arguably feed into both Project One Ring and Project Wombat...
 
 ## Project Padawan
 
 ### *Typed Theory: Who needs maths?*
 
-&gt; Things that involve a lot of words that make ecologists curl up in a ball and cry
++ Things that involve a lot of words that make ecologists curl up in a ball and cry
+
+## Project(s) Plunderling
+
++ Side Quest::Unrelated
+
+&lt;span 
+  style="
+  margin-left:60%; 
+  position: absolute; 
+  top: 74%"&gt;
+  &lt;img src="img/Plunderlings.png" width="85%" /&gt;
+&lt;/span&gt;
+
+---
+
+# Project Pokedex
+
+### Marrying Projects Wombat and Pokedex
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
